k8s/base/ai-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ai-service
  labels:
    app: ai-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ai-service
  template:
    metadata:
      labels:
        app: ai-service
        azure.workload.identity/use: "true"
    spec:
      serviceAccountName: ai-service
      nodeSelector:
        kubernetes.io/os: linux
        agentpool: user
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: ai-service
          image: ghcr.io/azure-samples/aks-store-demo/ai-service:2.1.0
          ports:
            - name: http
              containerPort: 5001
              protocol: TCP
          resources:
            requests:
              cpu: 20m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop: [ALL]
          startupProbe:
            httpGet:
              path: /health
              port: 5001
            failureThreshold: 10
            initialDelaySeconds: 10
            periodSeconds: 5
          readinessProbe:
            httpGet:
              path: /health
              port: 5001
            failureThreshold: 3
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 5001
            failureThreshold: 5
            periodSeconds: 15
